# perch

./: .gitignore  Cargo.toml  README.md  build.rs  shell.nix  style.css
src/: apps.rs  index.rs  main.rs  search.rs  sort.rs  ui.rs
src/window/: imp.rs
ui/: window.ui
