[package]
name = "perch"
version = "0.1.0"
edition = "2021"


[dependencies]
gtk4-layer-shell = "0.3.0"
rusqlite = { version = "0.31.0", features = ["bundled"] }
#See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies.gtk]
package = "gtk4"
version = "0.8.2"
features = ["v4_6"]

[build-dependencies]
glib-build-tools = "0.19.0"


